
PIG-4370: HBaseStorage should support delete markers (bridiver via daijy)

PIG-4360: HBaseStorage should support setting the timestamp field (bridiver via daijy)

PIG-4337: Split Types and MultiQuery e2e tests into multiple groups (rohini)

PIG-4066: An optimization for ROLLUP operation in Pig (hxquangnhat via cheolsoo)

PIG-4333: Split BigData tests into multiple groups (rohini)
 
BUG FIXES

PIG-4443: Write inputsplits in Tez to disk if the size is huge and option to compress pig input splits (rohini)

PIG-4447: Pig Cannot handle nullable values (arrays and records) in avro records (rdsr via daijy)

PIG-4444: Fix unit test failure TestTezAutoParallelism (daijy)

PIG-4445: VALUELIST and VALUESET outputSchema does not match actual schema of data returned when map value schema
 is complex (erwaman via daijy)

PIG-4442: Eliminate redundant RPC call to get file information in HPath (cnauroth via daijy)

PIG-4440: Some code samples in documentation use Unicode left/right single quotes, which cause a
 parse failure (cnauroth via daijy)

PIG-4264: Port TestAvroStorage to tez local mode (daijy)

PIG-4437: Fix tez unit test failure TestJoinSmoke, TestSkewedJoin (daijy)

PIG-4432: Built-in VALUELIST and VALUESET UDFs do not preserve the schema when the map value type is
 a complex type (erwaman via daijy)

PIG-4408: Merge join should support replicated join as a predecessor (bridiver via daijy)

PIG-4389: Flag to run selected test suites in e2e tests (daijy)

PIG-4385: testDefaultBootup fails because it cannot find "pig.properties" (mkudlej via daijy)

PIG-4397: CSVExcelStorage incorrect output if last field value is null (daijy)

PIG-4431: ReadToEndLoader does not close the record reader for the last input split (rdsr via daijy)

PIG-4426: RowNumber(simple) Rank not producing correct results (knoguchi)

PIG-4433: Loading bigdecimal in nested tuple does not work (kpriceyahoo via daijy)

PIG-4410: Fix testRankWithEmptyReduce in tez mode (daijy)
