@@ -1,87 +1,0 @@
-**/TestAccumuloPigCluster.java
-**/TestBigTypeSort.java
-**/TestCurrentTime.java
-**/TestDefaultDateTimeZone.java
-**/TestHBaseStorage.java
-**/TestInvokerGenerator.java
-**/TestOrcStorage.java
-**/TestStreamingUDF.java
-**/TestPluckTuple.java
-**/TestImplicitSplitOnTuple.java
-**/TestMockStorage.java
-**/TestLogicalPlanGenerator.java
-**/TestOrcStoragePushdown.java
-**/TestSchemaResetter.java
-**/TestLocationInPhysicalPlan.java
-**/TestAlgebraicEvalLocal.java
-**/TestAssert.java
-**/TestBatchAliases.java
-**/TestBlackAndWhitelistValidator.java
-**/TestBuiltin.java
-**/TestBuiltInBagToTupleOrString.java
-**/TestBuiltinInvoker.java
-**/TestCase.java
-**/TestCommit.java
-**/TestDataBagAccess.java
-**/TestFilterOpNumeric.java
-**/TestFilterOpString.java
-**/TestForEachNestedPlanLocal.java
-**/TestForEachStar.java
-**/TestIn.java
-**/TestInfixArithmetic.java
-**/TestInputOutputFileValidator.java
-**/TestJsonLoaderStorage.java
-**/TestLimitSchemaStore.java
-**/TestLoad.java
-**/TestLocal.java
-**/TestLocal2.java
-**/TestLOLoadDeterminedSchema.java
-**/TestMacroExpansion.java
-**/TestNullConstant.java
-**/TestOrderBy3.java
-**/TestParser.java
-**/TestPigContext.java
-**/TestPigSplit.java
-**/TestPigStorage.java
-**/TestPoissonSampleLoader.java
-**/TestPONegative.java
-**/TestProject.java
-**/TestProjectStarExpander.java
-**/TestRank1.java
-**/TestRank2.java
-**/TestRegisteredJarVisibility.java
-**/TestRelationToExprProject.java
-**/TestScriptingLanguagePython.java
-**/TestSplit.java
-**/TestSplitIndex.java
-**/TestStoreInstances.java
-**/TestStreamingLocal.java
-**/TestTypedMap.java
-**/TestUDF.java
-**/TestUDFContext.java
-**/TestUDFGroovy.java
-**/TestUDFWithoutParameter.java
-**/TestUnion.java
-**/TestUTF8.java
-**/TestGruntParser.java
-**/TestAutoLocalMode.java
-**/TestEvalPipelineLocal.java
-**/TestFetch.java
-**/TestPigRunner.java
-**/TestPigServerWithMacros.java
-**/TestMultiQueryBasic.java
-**/TestLoadStoreFuncLifeCycle.java
-**/TestCubeOperator.java
-**/TestJoinLocal.java
-**/TestMultiQuery.java
-**/TestNewPlanColumnPrune.java
-**/TestPigServerLocal.java
-**/TestPruneColumn.java
-**/TestRank3.java
-**/TestScalarAliasesLocal.java
-**/TestPigStatsTez.java
-**/TestStoreLocal.java
-**/TestPOPartialAggPlanTez.java
-**/TestMultiQueryLocal.java
-**/TestUnionOnSchema.java
-**/TestAvroStorage.java
