@@ -1,70 +1,0 @@
-**/TestStreamingUDF.java
-**/TestAccumulator.java
-**/TestAlgebraicEval.java
-**/TestBZip.java
-**/TestBestFitCast.java
-**/TestBinaryExpressionOps.java
-**/TestBuiltin.java
-**/TestCharArrayToNumeric.java
-**/TestCollectedGroup.java
-**/TestCombiner.java
-**/TestCompressedFiles.java
-**/TestCustomPartitioner.java
-**/TestEvalPipeline.java
-**/TestEvalPipeline2.java
-**/TestFRJoin.java
-**/TestFRJoinNullValue.java
-**/TestFilterUDF.java
-**/TestFinish.java
-**/TestForEachNestedPlan.java
-**/TestGrunt.java
-**/TestImplicitSplit.java
-**/TestInputOutputMiniClusterFileValidator.java
-**/TestJoin.java
-**/TestJoinSmoke.java
-**/TestKeyTypeDiscoveryVisitor.java
-**/TestLoad.java
-**/TestLocalRearrange.java
-**/TestLimitAdjuster.java
-**/TestLimitVariable.java
-**/TestMapReduce.java
-**/TestMapSideCogroup.java
-**/TestMapReduce2.java
-**/TestMergeJoin.java
-**/TestMergeJoinOuter.java
-**/TestNativeMapReduce.java
-**/TestNestedForeach.java
-**/TestNewPlanImplicitSplit.java
-**/TestParser.java
-**/TestPigContext.java
-**/TestPigProgressReporting.java
-**/TestPigServer.java
-**/TestPigServerWithMacros.java
-**/TestPigSplit.java
-**/TestPigStorage.java
-**/TestProjectRange.java
-**/TestRegisteredJarVisibility.java
-**/TestSample.java
-**/TestScalarAliases.java
-**/TestSchema.java
-**/TestScriptLanguage.java
-**/TestScriptLanguageJavaScript.java
-**/TestScriptUDF.java
-**/TestSkewedJoin.java
-**/TestSplitStore.java
-**/TestStore.java
-**/TestStoreInstances.java
-**/TestStoreOld.java
-**/TestStreaming.java
-**/TestToolsPigServer.java
-**/TestUDF.java
-**/TestUDFContext.java
-**/TestGroupConstParallelTez.java
-**/TestJobSubmissionTez.java
-**/TestLoaderStorerShipCacheFilesTez.java
-**/TestSecondarySortTez.java
-**/TestTezAutoParallelism.java
-**/TestTezCompiler.java
-**/TestTezJobControlCompiler.java
-**/TestTezLauncher.java
-**/TestPigServerWithMacrosRemote.java
